--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "@types/react": "^17.0.14",
+    "camelize": "^1.0.0",
     "expo": "~42.0.1",
     "expo-font": "~9.2.1",
     "expo-status-bar": "~1.0.4",
