--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo": "~42.0.1",
     "expo-font": "~9.2.1",
     "expo-status-bar": "~1.0.4",
+    "native-base": "^3.0.6",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
@@ -33,7 +34,9 @@
     "react-native-svg": "12.1.1",
     "react-native-web": "^0.11.7",
     "react-native-webview": "^11.6.5",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "styled-system": "^5.1.5",
+    "firebase": "8.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
