--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-native-webview": "^11.6.5",
     "styled-components": "^5.3.0",
     "styled-system": "^5.1.5",
-    "firebase": "8.2.3"
+    "firebase": "8.2.3",
+    "lottie-react-native": "4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
