--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "styled-components": "^5.3.0",
     "styled-system": "^5.1.5",
     "firebase": "8.2.3",
-    "lottie-react-native": "4.0.2"
+    "lottie-react-native": "4.0.2",
+    "expo-camera": "~11.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
